[package]
name = "portability-gfx"
publish = false
version = "0.1.0"
edition = "2018"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
	"Markus Siglreithmaier <m.siglreith@gmail.com>",
]

[lib]
name = "portability_gfx"

[features]
default = []
dispatch = []
nightly = ["gfx-auxil"]
metal-capture = ["gfx-backend-metal/auto-capture"]

[dependencies]
copyless = "0.1.1"
env_logger = { version = "0.8", optional = true }
log = { version = "0.4", features = ["release_max_level_error"] }
renderdoc = { version = "0.3", optional = true }
raw-window-handle = "0.3"

[dependencies.hal]
package = "gfx-hal"
git = "https://github.com/gfx-rs/gfx"

[dependencies.gfx-backend-empty]
git = "https://github.com/gfx-rs/gfx"

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
git = "https://github.com/gfx-rs/gfx"
optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
optional = true

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "ios")))'.dependencies.gfx-backend-gl]
git = "https://github.com/gfx-rs/gfx"
optional = true

[dependencies.gfx-auxil]
git = "https://github.com/gfx-rs/gfx"
optional = true
