[package]
name = "portability-icd"
version = "0.1.0"
authors = ["Dzmitry Malyshau <kvark@mozilla.com>"]

[lib]
name = "portability_icd"
crate-type = ["cdylib"]

[features]
default = []
dx12 = ["portability-gfx/dx12"]
vulkan = ["portability-gfx/vulkan"]

[dependencies]
portability-gfx = { path = "../libportability-gfx" }
