[package]
name = "portability"
publish = false
version = "0.1.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Markus Siglreithmaier <m.siglreith@gmail.com>",
]

[lib]
name = "portability"
crate-type = ["cdylib"]

[features]
default = []
dx12 = ["portability-gfx/gfx-backend-dx12"]
metal = ["portability-gfx/gfx-backend-metal"]
vulkan = ["portability-gfx/gfx-backend-vulkan"]

[dependencies]
portability-gfx = { path = "../libportability-gfx" }
