[package]
name = "portability"
publish = false
version = "0.1.0"
edition = "2018"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Markus Siglreithmaier <m.siglreith@gmail.com>",
]

[lib]
name = "portability"
crate-type = ["staticlib", "cdylib"]

[features]
default = []
debug = ["portability-gfx/env_logger", "portability-gfx/nightly"]
dx12 = ["portability-gfx/gfx-backend-dx12"]
dx11 = ["portability-gfx/gfx-backend-dx11"]
metal = ["portability-gfx/gfx-backend-metal"]
vulkan = ["portability-gfx/gfx-backend-vulkan"]
gl = ["portability-gfx/gfx-backend-gl"]

[dependencies]
portability-gfx = { path = "../libportability-gfx" }
